--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,4 +1,8 @@
-.register {
+
+
+
+
+ .register {
   margin-bottom: 100px;
 }
 
@@ -53,85 +57,148 @@
   margin-top: 36px;
 }
 
-
-
-@media (max-width: 1300px) {
-  .input {
-    max-width: 500px;
-  }
-  
-}
-@media (max-width: 1024px) {
-  .input {
-    max-width: 400px;
-  }
-  
-}
-
-@media (max-width: 768px) {
+/* 
+@media (max-width:768px) {
   .input__wrapper {
     flex-direction: column;
   }
-  
-  .register__title {
-    font-size: 36px;
-  }
-}
+} */
 
-@media (max-width: 425px) {
-  .input {
-    max-width: 340px;
-  }
-  
+@media (max-width: 1024px) {
   .register__title {
-    font-size: 30px;
+    font-size: 42px;
+    padding-top: 40px;
   }
 
   .input__text {
     font-size: 18px;
   }
 
+  .input__register input {
+    width: 490px;
+    height: 55px;
+  }
+
   .register__button {
-    width: 360px;
-    padding: 26px;
+    width: 320px;
+    padding: 22px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .register {
+    margin-bottom: 50px;
+  }
+
+  .register__title {
+    font-size: 36px;
+    padding-top: 30px;
+  }
+
+  .input__text {
+    font-size: 18px;
+  }
+
+  .input__register input {
+    width: 100%;
+    height: 50px;
+    font-size: 18px;
+  }
+
+  .input__wrapper {
+    flex-direction: column;
+  }
+
+  .register__button {
+    width: 100%;
+    padding: 20px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 480px) {
+  .register {
+    margin-bottom: 30px;
+  }
+
+  .register__title {
+    font-size: 28px;
+    padding-top: 20px;
+  }
+
+  .input__text {
+    font-size: 16px;
+  }
+
+  .input__register input {
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
+  }
+
+  .input__wrapper {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .register__button {
+    width: 100%;
+    padding: 16px;
+    font-size: 16px;
   }
 }
 
 @media (max-width: 375px) {
-  .input {
-    max-width: 300px;
+  .register {
+    margin-bottom: 20px;
   }
-  
-  .container {
-    padding: 0 15px
+
+  .register__title {
+    font-size: 24px;
+    padding-top: 15px;
+  }
+
+  .input__text {
+    font-size: 14px;
+  }
+
+  .input__register input {
+    width: 100%;
+    height: 35px;
+    font-size: 14px;
+  }
+
+  .register__button {
+    width: 100%;
+    padding: 14px;
+    font-size: 14px;
   }
 }
 
 @media (max-width: 320px) {
-  .input__text {
-    font-size: 16px;
+  .register {
+    margin-bottom: 15px;
   }
-  .input {
-    max-width: 280px;
-  }
-  
-  .register__button {
-    width: 250px;
-  }
-  .register__title {
-    font-size: 26px;
-  }
-  .container {
-    padding: 0 15px
-  }
-}
 
-@media (max-width: 300px) {
+  .register__title {
+    font-size: 20px;
+    padding-top: 10px;
+  }
+
+  .input__text {
+    font-size: 12px;
+  }
+
   .input__register input {
-    width: 200px;
+    width: 100%;
+    height: 30px;
+    font-size: 12px;
   }
-  .container {
-    padding: 0 15px
+
+  .register__button {
+    width: 100%;
+    padding: 12px;
+    font-size: 12px;
   }
-  
 }
