--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -102,7 +102,6 @@
 
   .input__register input {
     width: 100%;
-    height: 50px;
     font-size: 18px;
   }
 
@@ -133,8 +132,8 @@
 
   .input__register input {
     width: 100%;
-    height: 40px;
     font-size: 16px;
+    border-radius: 16px;
   }
 
   .input__wrapper {
@@ -165,8 +164,8 @@
 
   .input__register input {
     width: 100%;
-    height: 35px;
     font-size: 14px;
+    border-radius: 14px;
   }
 
   .register__button {
@@ -192,8 +191,8 @@
 
   .input__register input {
     width: 100%;
-    height: 30px;
     font-size: 12px;
+    border-radius: 8px;
   }
 
   .register__button {
