--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,7 +27,7 @@
   font-size: 36px;
   font-weight: 500;
   line-height: normal;
-  padding-top: 210px;
+  padding-top: 189px;
 }
 
 .header__title {
@@ -40,9 +40,9 @@
 }
 
 .header__button {
-  position: absolute;
-  bottom: 50px;
-  right: 50px;
+  position: relative;
+  top: -1vh;
+  left: 1vw;
   width: 296px;
   height: 50px;
   flex-shrink: 0;
@@ -52,14 +52,42 @@
   cursor: pointer;
 }
 
-
 .btn__text {
   color: #000;
   font-size: 20px;
   font-style: italic;
   font-weight: 600;
+  text-align: center;
 }
 
+.header__two__title p {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.hedaer__time {
+  display: flex;
+  gap: 0 32px;
+}
+
+.hedaer__time:nth-last-child(1) {
+  gap: 0;
+  justify-content: space-around;
+}
+
+.header__two__title {
+  text-align: center;
+
+}
+
+.header__time__info {
+  display: grid;
+  color: #fff;
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+}
 
 @media (max-width: 985px) {
   .header__title {
@@ -74,6 +102,20 @@
     width: 245px;
     font-size: 18px;
   }
+
+  .header__two__title p {
+    font-size: 18px;
+  }
+
+  .header__time__info {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 800px) {
+  .header__two__title p {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -83,13 +125,16 @@
     align-items: center;
   }
 
-  .header__text{
-    padding-top: 100px;
+  .header__text {
+    padding-top: 30px;
+  }
+
+  .hedaer__time {
+    padding-bottom: 10px;
   }
 }
 
-
-@media (max-width: 525px) { 
+@media (max-width: 525px) {
   .header__title {
     font-size: 36px;
   }
@@ -99,10 +144,25 @@
     width: 190px;
     bottom: 18px;
   }
+  .header__time__info {
+    font-size: 18px;
+  }
+
+  .header__two__title p {
+    font-size: 14px;
+  }
+  .hedaer__time {
+    padding-bottom: 40px;
+  }
 }
 
+@media (max-width: 525px) {
+  .header__two__title p {
+    font-size: 12px;
+  }
+}
 
-@media (max-width: 375px) { 
+@media (max-width: 375px) {
   .header__title {
     font-size: 30px;
   }
@@ -118,4 +178,15 @@
   .header__text {
     font-size: 18px;
   }
+
+  .header__time__info {
+    font-size: 14px;
+  }
+}
+
+
+@media (max-width: 320px) {
+  .header__two__title p {
+    font-size: 10px;
+}
 }
