--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -195,7 +195,13 @@
   }
 
   .header__two__title p {
-    font-size: 21px;
+    font-size: 19px;
+  }
+}
+
+@media (max-width: 415px) {
+  .header__two__title p {
+    font-size: 18px;
   }
 }
 
